(fix) Spinner is visible during Lite Mode Error

--- a/css/order.css
+++ b/css/order.css
@@ -233,6 +233,8 @@
   width: 100%;
   text-align: center;
   padding: 20px;
+  animation: errorAnimationSync 0s 3s forwards;
+  -webkit-animation: errorAnimationSync 0s 3s forwards;
 }
 
 .bnomics-spinner {
@@ -251,6 +253,12 @@
 }
 @-webkit-keyframes spin {
   to { -webkit-transform: rotate(360deg); }
+}
+@keyframes errorAnimationSync {
+  to { height: 0; width: 0; overflow: hidden; padding: 0; }
+}
+@-webkit-keyframes errorAnimationSync {
+  to { height: 0; width: 0; overflow: hidden; padding: 0; }
 }
 /** Hide Panels by Default **/
 
